LIN-3899/LIN-3906 Fix scrollbar on required input with empty label

--- a/vaadin-flow/core/src/main/resources/META-INF/resources/themes/linkki/components/vaadin-form-item.css
+++ b/vaadin-flow/core/src/main/resources/META-INF/resources/themes/linkki/components/vaadin-form-item.css
@@ -31,7 +31,10 @@
 /************************************************ 
  * REQUIRED INDICATOR
  ************************************************/
- 
+
+[part="required-indicator"] {
+    min-height: 1em;
+}
 [part="required-indicator"]::after {
     position: absolute;
     height: 0;
